--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.js",
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
@@ -50,6 +51,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^23.4.2",
     "babel-preset-env": "^1.7.0",
+    "coveralls": "^3.0.2",
     "jest": "^23.5.0",
     "jest-cli": "^23.5.0",
     "ts-jest": "^23.1.4",
