chore: upgrade babel to 7

--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
   },
   "homepage": "https://github.com/tbingooo/react-native-adaptive-stylesheet#readme",
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@types/jest": "^23.3.1",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.4.2",
-    "babel-preset-env": "^1.7.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "coveralls": "^3.0.2",
     "jest": "^23.5.0",
     "jest-cli": "^23.5.0",
