--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "url": "git+ssh://git@github.com/tbingooo/react-native-adaptive-stylesheet.git"
   },
   "peerDependencies": {
-    "react-native": "*"
+    "react-native": ">=0.50.0",
+    "react": "*"
   },
   "jest": {
     "transform": {
@@ -55,11 +56,13 @@
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@types/jest": "^23.3.1",
+    "@types/react-native": "*",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "coveralls": "^3.0.2",
     "jest": "^23.5.0",
     "jest-cli": "^23.5.0",
+    "react-native": "*",
     "ts-jest": "^23.1.4",
     "typescript": "^3.0.3"
   },
